--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -2,11 +2,12 @@
   width: 100%;
   height: auto;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center; */
+  /* align-items: center; */
   flex-direction: column;
   background-color: #040213;
-  color: #f2a576;
+  color: #040213;
+  font-family: "Gill Sans", sans-serif;
 }
 .projects .projectTitle {
   text-align: center;
@@ -16,21 +17,39 @@
 }
 
 .proj{
-  border-radius: 15px;
-  width: 300px;
-  height: 300px;
-  margin: 40px;
+  border-radius: 5px;
+  width: 450px;
+  height: 180px;
+  margin: 30px;
   box-shadow: 0px 5px 15px rgba(243, 186, 153, 0.4);
-  text-align: center;
+  /* text-align: center; */
+  
+  background-color: #ece2da;
+  padding-left: 2rem;
+  /* padding-right: 3rem; */
+  padding-top: 2rem;
+  font-family: "Gill Sans", sans-serif;
+
+}
+.proj h2{
+  color: #040213;
+}
+.proj p{
+  color: #040213;
+}
+.proj a{
+  color: #040213;
+  text-decoration: none;
 }
 .imge{
   width: 300px;
   height: 300px;  
 }
 .projectList {
-  width: 70vw;
+  width: auto;
   height: auto;
   display: grid;
+  padding-right: 2rem;
   grid-template-columns: 1fr 1fr 1fr;
   place-items: center;
 }
@@ -69,12 +88,22 @@
 @media only screen and (max-width: 1300px) {
   .projectList {
     grid-template-columns: 1fr 1fr;
+    width: 100%;
+   
   }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 600px) {
   .projectList {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr ;
+    width: 100%;
+    padding-right: 3rem;
+  }
+  .proj{
+    border-radius: 5px;
+    width: 350px;
+    height: 180px;
+   
   }
 }
 
@@ -82,8 +111,10 @@
   .projectList {
     width: 100%;
   }
-  .projectItem {
-    width: 300px;
-    height: 300px;
+  .proj{
+    border-radius: 5px;
+    width: 270px;
+    height: 180px;
+   
   }
 }
