--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   /* font-family: Arial, Helvetica, sans-serif; */
   background-color: #040213;
-  font-family: cursive;
+  font-family: "Gill Sans", sans-serif;
 }
 
 body {
