--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,12 +1,17 @@
 .home {
   width: 100%;
-  align-items: center;
+  align-items: right;
   /* font-family: "Arial", sans-serif; */
   font-family: "Gill Sans", sans-serif;
   color: #000000;
 overflow-x: hidden;
 }
-
+.space{
+  height: 10rem;
+}
+.back{
+  height: 40rem;
+}
 .about{
   width: 100%;
   height: calc(100vh - 100px);
@@ -18,27 +23,46 @@ overflow-x: hidden;
   /* background-color: #21325e; */
   /* background: #161415 url(../images/head3.jpg) no-repeat top center; */
   color: #f0f0f0;
+  padding-left: 1rem;
+  /* border: 2px solid #f0f0f0; */
 }
 
 .about h1 {
   /* font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
-  font-size: 45px;
+  font-size: 53px;
+  /* font-family: cursive; */
   font-family: "Gill Sans", sans-serif;
-  color: #f2a576;
+  /* color: #f2a576; */
+  color: #6c76d7;
   height: 50px;
+  padding-left: 17rem;
 }
 
 .about .prompt {
   width: 40%;
   font-size: 23px;
-  color: #fcf6fc;
+  color: #f5f2f5;
+  padding-left: 19rem;
 }
 .prompt svg {
   font-size: 30px;
   margin: 5px;
   color: white;
 }
+.button{
+  border-radius: 1.5rem;
+  padding: 15px 32px;
+  text-align: center;
+  border: none;
+  text-decoration: none;
+  display: inline-block;
+  background: linear-gradient(to  bottom right, rgb(86, 110, 231), rgb(135, 146, 228) 50%, rgb(166, 179, 241) 75%, rgb(133, 146, 216) 75%);
+  font-size: 1.2rem;
 
+}
+.button:hover {
+  box-shadow: 0 12px 16px 0 rgba(60, 45, 112, 0.24),0 17px 50px 0 rgba(134, 151, 232, 0.19);
+}
 .skills {
   font-size: 30px;
   width: 100%;
@@ -59,13 +83,37 @@ overflow-x: hidden;
 /* * {box-sizing:border-box} */
 
 
-.paraa{
+/* .paraa{
   font-size: 23px;
   color: white;
+  
+} */
+.para .pp{
+  font-size: 24px;
+  justify-content: justify;
+  text-align: left;
+  color: rgb(247, 243, 243);
+  padding-left: 3rem;
+  font-family: "Gill Sans", sans-serif;
 }
+/* .aboutt{
+  padding-left: 2rem;
 
+} */
+.img{
+/* border: 2px solid white; */
+padding-right: 3rem;
+}
 .image{
   object-fit: cover;
+  /* height: 15rem; */
+  /* width: 25rem; */
+  max-width: 42rem;
+  /* padding-left: 2rem; */
+  padding-right: 12rem;
+  /* border: 2px solid white; */
+  align-items:right;
+  margin-bottom: 8rem;
 }
 .projects1 {
   width: 100%;
@@ -75,11 +123,11 @@ overflow-x: hidden;
   align-items: center;
   flex-direction: column;
   /* background-color: #040213; */
-  color: #f2a576;
+  color: #6570d2;
 }
 .projects1 .projectTitle {
   text-align: center;
-  color: #f2a576;
+  color: #6570d2;
   font-size: 60px;
   font-weight: bolder;
 }
@@ -92,20 +140,39 @@ overflow-x: hidden;
   margin: 40px;
   padding-left: 1rem;
   padding-right: 1rem;
-  box-shadow: 0px 5px 15px #c29478;
+  box-shadow: 0px 5px 15px #3744b9;
   text-align: center;
 }
 .proj1:hover {
-  box-shadow: 0px 3px 15px #f2a576;
+  box-shadow: 0px 3px 15px #3744b9;
   transition: 0.3s ease-in;
   cursor: pointer;
 }
+.skills{
+  /* border: 2px solid white; */
+  display: flex;
+  flex-direction: row;
+}
+.img{
+  /* border: 2px solid white;  */
+  padding-bottom: 2rem;
+  margin-bottom: 2rem;
+}
+.skillss .para{
+/* margin-top: 2rem; */
+}
+.aboutt{
+  /* border: 2px solid white; */
+  width: 60%;
+  align-items: left;
+}
+
 .skills .list {
   list-style: none;
   width: 60%;
   font-size: 30px;
   /* color: white; */
-  color: #f2a576;
+  color: #3744b9;
 }
 
 .list span {
@@ -116,36 +183,375 @@ overflow-x: hidden;
   font-size: 19px;
 }
 .heading{
-  color: #f2a576;
-  font-size: 28px;
+  color: #3744b9;
+  font-size: 32px;
+  /* padding-left: 5rem; */
+  text-align: center;
 }
-@media only screen and (max-width: 600px) {
+.skillss{
+  display: flex;
+}
+.skillss h3 {
+  text-align: center;
+  /* color: white; */
+  width: 100%;
+
+}
+.skillss p {
+  text-align: center;
+  color: white;
+  width: 70%;
+    margin-top: 2rem;
+  padding-left: 1.4rem;
+  font-size: 23px;
+}
+.skillss .image{
+  padding-right: 5rem;
+}
+.skillss img {
+  text-align: left;
+
+  color: white;
+  width: 80%;
+  padding-right: 5rem;
+
+
+}
+
+.skillss .icon {
+padding-left: 2.8rem;
+color: white;
+}
+
+.skillss Link {
+/* padding-left: 2.8rem; */
+color: white;
+}
+.skills{
+  display: inline;
+}
+  .skills h3 {
+    text-align: left;
+    /* color: white; */
+    width: 100%;
+    padding-left: 3rem;
+  }
+  .skills p {
+    text-align: left;
+    color: white;
+    width: 100%;
+    padding-left: 2.6rem;
+    font-size: 23px;
+  }
+  .skills .img {
+    /* text-align: center; */
+    margin-top: 25px;
+    color: white;
+    width: 80%;
+    /* padding-left: 2.8rem; */
+    padding-right: 3rem;
+  }
+.skills .icon {
+  padding-left: 2.8rem;
+  color: white;
+}
+@media only screen and (max-width: 351px) {
+  .back{
+    width: 100%; 
+  }
   .about h1 {
-    font-size: 35px;
-    color: #f2a576;
+    font-size: 44px;
+    color: #3744b9;
+    padding-right: 25rem;
+    width: 80%;
   }
 
   .about .prompt {
-    margin-top: 10px;
-    font-size: 20px;
+    margin-top: 20px;
+    font-size: 25px;
     width: 80%;
     color: white;
+    padding-right: 17rem;
   }
-  .para{
+  /* .para{
     font-size: 3px;  
-  }
+  } */
+  .button{
+  border-radius: 1.5rem;
+  padding: 15px 32px;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  /* display: inline-block; */
+  background: linear-gradient(to  bottom right, rgb(86, 110, 231), rgb(135, 146, 228) 50%, rgb(166, 179, 241) 75%, rgb(133, 146, 216) 75%);
+  font-size: 1.2rem;
 
-  .skills {
+}
+.button:hover {
+  box-shadow: 0 12px 16px 0 rgba(60, 45, 112, 0.24),0 17px 50px 0 rgba(134, 151, 232, 0.19);
+}
+.skillss{
+  display: inline;
+  padding-right: 3rem;
+  margin-right: 3rem;
+  border: #f0f0f0;
+}
+  .skillss h3 {
+    text-align: center;
+    /* color: white; */
+    width: 100%;
+    /* padding-left: 0rem; */
+  }
+  .skillss p {
     text-align: center;
     color: white;
-  }
-  .list {
-    padding: 0;
-    color: white;
+    width: 100%;
+    padding-left: 3rem;
+    font-size: 26px;
+   text-justify: inherit;
   }
 
-  .skills h2 {
-    font-size: 5px;
+  .skillss .img {
+    text-align: center;
+    margin-top: 27px;
     color: white;
+    width: 60%;
+    padding-right: 3rem;
+    height: 15rem;
+    width: 27rem;
+   
   }
+
+.skillss .icon {
+  padding-left: 2.8rem;
+  color: white;
+}
+
+.skillss Link {
+  /* padding-left: 2.8rem; */
+  color: white;
+}
+.skills{
+  display: inline;
+}
+  .skills h3 {
+    margin-top: 2rem;
+    text-align: left;
+    /* color: white; */
+    width: 100%;
+    /* padding-left: 0rem; */
+  }
+  .skills p {
+    text-align: left;
+    color: white;
+    width: 80%;
+    padding-left: 2.4rem;
+    font-size: 23px;
+  }
+
+.skills .icon {
+  padding-left: 2.8rem;
+  color: white;
+}
+
+/* .skillss Link {
+  padding-left: 2.8rem;
+  color: white;
+} */
+
+}
+@media only screen and (max-width: 1180px) {
+  .back{
+    width: 100%; 
+  }
+  .about h1 {
+    font-size: 44px;
+    color: #3744b9;
+    padding-right: 17rem;
+    width: 80%;
+  }
+
+  .about .prompt {
+    margin-top: 20px;
+    font-size: 25px;
+    width: 80%;
+    color: white;
+    padding-right: 17rem;
+  }
+
+  .button{
+    border-radius: 1.5rem;
+    padding: 15px 32px;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    /* display: inline-block; */
+    background: linear-gradient(to  bottom right, rgb(86, 110, 231), rgb(135, 146, 228) 50%, rgb(166, 179, 241) 75%, rgb(133, 146, 216) 75%);
+    font-size: 1.2rem;
+  
+  }
+  .button:hover {
+    box-shadow: 0 12px 16px 0 rgba(60, 45, 112, 0.24),0 17px 50px 0 rgba(134, 151, 232, 0.19);
+  }
+.skillss{
+  display: inline;
+}
+  .skillss h3 {
+    text-align: center;
+  
+    width: 100%;
+ 
+  }
+  .skillss .para {
+    text-align: center;
+    color: white;
+    width: 100%;
+    padding-left: 2rem;
+    font-size: 26px;
+  }
+  .skillss .img {
+    text-align: center;
+    margin-top: 42px;
+    color: white;
+    width: 80%;
+  padding-left: 4rem;
+ 
+  }
+.skillss .icon {
+  padding-left: 2.8rem;
+  color: white;
+}
+
+
+.skills{
+  display: inline;
+}
+  .skills h3 {
+    margin-top: 2rem;
+    text-align: left;
+  
+    width: 100%;
+   
+  }
+  .skills p {
+    text-align: left;
+    color: white;
+    width: 80%;
+   
+    font-size: 23px;
+  }
+
+.skills .icon {
+  padding-left: 2.8rem;
+  color: white;
+}
+
+
+
+}
+@media only screen and (max-width: 420px) {
+  .back{
+    width: 100%; 
+  }
+  .about h1 {
+    font-size: 44px;
+    color: #3744b9;
+    padding-right: 19rem;
+    width: 100%;
+  }
+
+  .about .prompt {
+    margin-top: 20px;
+    font-size: 25px;
+    width: 80%;
+    color: white;
+    padding-right: 21rem;
+  }
+  /* .para{
+    font-size: 3px;  
+  } */
+  .button{
+  border-radius: 1.5rem;
+  padding: 15px 32px;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  /* display: inline-block; */
+  background: linear-gradient(to  bottom right, rgb(86, 110, 231), rgb(135, 146, 228) 50%, rgb(166, 179, 241) 75%, rgb(133, 146, 216) 75%);
+  font-size: 1.2rem;
+
+}
+.button:hover {
+  box-shadow: 0 12px 16px 0 rgba(60, 45, 112, 0.24),0 17px 50px 0 rgba(134, 151, 232, 0.19);
+}
+.skillss{
+  display: inline;
+  padding-right: 3rem;
+  margin-right: 6rem;
+  border: #f0f0f0;
+}
+  .skillss h3 {
+    text-align: center;
+    /* color: white; */
+    width: 100%;
+    /* padding-left: 0rem; */
+  }
+  .skillss p {
+    text-align: center;
+    color: white;
+    /* width: 100%; */
+    /* padding-left: 3rem; */
+    margin-right: 6rem;
+    font-size: 26px;
+   text-justify:initial;
+  }
+
+  .skillss .img {
+    text-align: center;
+    margin-top: 27px;
+    color: white;
+    width: 100%;
+    margin-right: 6rem;
+    height: 15rem;
+    width: 20rem;
+   
+  }
+
+.skillss .icon {
+  padding-left: 2.8rem;
+  color: white;
+}
+
+.skillss Link {
+  /* padding-left: 2.8rem; */
+  color: white;
+}
+.skills{
+  display: inline;
+}
+  .skills h3 {
+    margin-top: 2rem;
+    text-align: left;
+    /* color: white; */
+    width: 100%;
+    /* padding-left: 0rem; */
+  }
+  .skills p {
+    text-align: left;
+    color: white;
+    width: 80%;
+    /* padding-left: 2.4rem; */
+    font-size: 23px;
+  }
+
+.skills .icon {
+  padding-left: 2.8rem;
+  color: white;
+}
+
+/* .skillss Link {
+  padding-left: 2.8rem;
+  color: white;
+} */
+
 }
