--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,8 +1,8 @@
 .navbar {
   width: 100%;
   height: 70px;
-  background: #0c0f28;
-  
+  /* background: #0c0f28; */
+  background: #02091F;
 }
 
 .links {
