--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,57 +1,93 @@
+/* .body {
+  background-image: url("Home1.png");
+
+ } */
 .projects {
   width: 100%;
-  height: auto;
+  height: 100%;
   display: flex;
-  /* justify-content: center; */
-  /* align-items: center; */
+
   flex-direction: column;
-  background-color: #040213;
-  color: #040213;
+  /* background-color: #040213; */
+  color: #dee0f3;
   font-family: "Gill Sans", sans-serif;
+  /* background-image: url("project.png"); */
+}
+.projects h1{
+  align-items: center;
+  padding-left: 29rem;
 }
 .projects .projectTitle {
   text-align: center;
-  color: #f2a576;
+ 
   font-size: 60px;
   font-weight: bolder;
 }
 
+
+
 .proj{
+ 
+  width: 15rem;
+  height: 15rem;
+
+  box-shadow: 0px 5px 15px rgba(19, 19, 19, 0.4);
+
+
+  background-color: #000003;
+
+  font-family: "Gill Sans", sans-serif;
+  border-top-left-radius: 7rem;
+  border-top-right-radius: 7rem;
+  border-bottom-left-radius: none;
+  border-bottom-right-radius: none;
+
+}
+.imge{
+  width: 15rem;
+  height: 15rem;
+  border-top-left-radius: 7rem;
+  border-top-right-radius: 7rem;
+}
+.proj3{
   border-radius: 5px;
-  width: 450px;
-  height: 180px;
-  margin: 30px;
-  box-shadow: 0px 5px 15px rgba(243, 186, 153, 0.4);
+  width: 16rem;
+  height: 16rem;
+  /* margin: 30px; */
+  margin-left: 45rem;
+  margin-bottom: 45rem;
+  box-shadow: 0px 5px 15px rgba(19, 19, 19, 0.4);
   /* text-align: center; */
-  
-  background-color: #ece2da;
-  padding-left: 2rem;
+  opacity: 0.1rem;
+  /* background: linear-gradient(to  bottom right, rgb(21, 21, 21), rgb(0, 0, 0) 50%, rgb(0, 0, 0) 75%); */
+  padding-left: 0.5rem;
+  background-color: rgb(39, 67, 127);
   /* padding-right: 3rem; */
-  padding-top: 2rem;
+  /* padding-top: 1rem; */
   font-family: "Gill Sans", sans-serif;
 
 }
 .proj h2{
-  color: #040213;
+  color: #e1d7d7;
 }
 .proj p{
-  color: #040213;
+  color: #e1d7d7;
 }
 .proj a{
-  color: #040213;
+  color: #e1d7d7;
   text-decoration: none;
 }
-.imge{
-  width: 300px;
-  height: 300px;  
-}
+
 .projectList {
-  width: auto;
-  height: auto;
+  width: 40rem;
+  height: 40rem;
   display: grid;
   padding-right: 2rem;
   grid-template-columns: 1fr 1fr 1fr;
   place-items: center;
+
+  /* background:#232429; */
+  /* border: 2px solid wheat; */
 }
 
 /* MENU ITEM STYLING */
@@ -61,11 +97,11 @@
   width: 300px;
   height: 300px;
   margin: 40px;
-  box-shadow: 0px 5px 15px rgba(243, 186, 153, 0.4);
+  /* box-shadow: 0px 5px 15px rgba(243, 186, 153, 0.4); */
   text-align: center;
 }
-.proj:hover {
-  box-shadow: 0px 3px 15px #f2a576;
+.proj1:hover {
+  box-shadow: 0px 3px 15px #232429;
   transition: 0.3s ease-in;
   cursor: pointer;
 }
@@ -105,6 +141,10 @@
     height: 180px;
    
   }
+  .projects h1{
+    align-items: center;
+    padding-left: 3.5rem;
+  }
 }
 
 @media only screen and (max-width: 800px) {
@@ -116,5 +156,29 @@
     width: 270px;
     height: 180px;
    
+  }
+  .projects h1{
+    align-items: center;
+    padding-left: 7.5rem;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .projectList {
+    grid-template-columns: 1fr ;
+    width: 100%;
+    padding-left: 3rem;
+
+  }
+  .proj{
+    border-radius: 5px;
+    width: 350px;
+    height: 180px;
+    margin-top: 2rem;
+   
+  }
+  .projects h1{
+    align-items: center;
+    padding-left: 3.5rem;
   }
 }
